--- a/config/database.yml
+++ b/config/database.yml
@@ -16,10 +16,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: <%= ENV.fetch('POSTGRES_HOST', 'localhost') %>
-  username: <%= ENV.fetch('POSTGRES_USER', 'postgres') %>
-  password: <%= ENV.fetch('POSTGRES_PASSWORD', '') %>
-  port: <%= ENV.fetch('POSTGRES_PORT', 5432) %>
+  host: db
+  username: postgres
+  password: password
+  port: 5432
   pool: 5
 
 development:
